Fundamentals1/doc/logfile.txt
Class documentation
<---- javadoc command: ---->
/usr/lib/jvm/java-8-oracle/bin/javadoc
-author
-version
-nodeprecated
-package
-noindex
-notree
-nohelp
-nonavbar
-source
1.8
-classpath
/usr/share/bluej/bluejcore.jar:/usr/share/bluej/junit-4.8.2.jar:/usr/share/bluej/userlib/pi4j-core.jar:/usr/share/bluej/userlib/pi4j-device.jar:/usr/share/bluej/userlib/pi4j-service.jar:/usr/share/bluej/userlib/pi4j-gpio-extension.jar:/home/cmis/APCS-peter2524-cmis/Fundamentals1
-d
/home/cmis/APCS-peter2524-cmis/Fundamentals1/doc
-encoding
UTF-8
-charset
UTF-8
-docletpath
/usr/share/bluej/bjdoclet.jar
-doclet
bluej.doclet.doclets.formats.html.HtmlDoclet
/home/cmis/APCS-peter2524-cmis/Fundamentals1/Fundamentals.java
<---- end of javadoc command ---->
Loading source file /home/cmis/APCS-peter2524-cmis/Fundamentals1/Fundamentals.java...
/home/cmis/APCS-peter2524-cmis/Fundamentals1/Fundamentals.java:34: error: unclosed string literal
        +"
         ^
/home/cmis/APCS-peter2524-cmis/Fundamentals1/Fundamentals.java:34: error: ';' expected
        +"
          ^
/home/cmis/APCS-peter2524-cmis/Fundamentals1/Fundamentals.java:36: error: illegal start of expression
        System.out.print("The char variable is "+thenumberf+" "+chardescription+nln+);
              ^
/home/cmis/APCS-peter2524-cmis/Fundamentals1/Fundamentals.java:36: error: ';' expected
        System.out.print("The char variable is "+thenumberf+" "+chardescription+nln+);
                  ^
/home/cmis/APCS-peter2524-cmis/Fundamentals1/Fundamentals.java:36: error: illegal start of expression
        System.out.print("The char variable is "+thenumberf+" "+chardescription+nln+);
                                                                                    ^
5 errors
